fix: center align the result display in mobile view

--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,10 @@ body {
     .type {
         padding: 70px 20px 0 20px;
     }
+
+    #showResult{
+        align-items: center;
+    }
 }
 
 /* @media screen and (min-width: 480px) {
